added css stylesheet for tweets and refactored character counting code

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -43,86 +45,37 @@
           <span class="counter">140</span>
         </form>
       </section>
+      <section id="tweets">
+        <article class="tweet">
+          <header>
+           <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVEZukS3WdeDbEY_CLsj7Re1_7s2I84S7SSpafWGVGg81SICd_>
+           <strong>Tweet 2 Header </strong>
+          <span> @Tweet1User</span>
+          </header>
+          <p>Tweet 1 Content</p>
+          <footer>
+          Tweet 1 Footer
+          <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png>
+          <img src=https://www.seoclerk.com/pics/want55519-1naJS01508179397.png>
+          <img src=http://downloadicons.net/sites/default/files/small-flag-symbol-73352.png>
+          </footer>
+        </article>
+        <article class="tweet">
+          <header>
+          <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVEZukS3WdeDbEY_CLsj7Re1_7s2I84S7SSpafWGVGg81SICd_>
+          <strong>Tweet 2 Header </strong>
+          <span> @Tweet2User</span>
+          </header>
+          <p>Tweet 2 Content</p>
+          <footer>
+          Tweet 2 Footer
+          <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png>
+          <img src=https://www.seoclerk.com/pics/want55519-1naJS01508179397.png>
+          <img src=http://downloadicons.net/sites/default/files/small-flag-symbol-73352.png>
+          </footer>
+        </article>
+      </section>
     </main>
-    <p>
-
-    blah blah
-
-    </p>
-
-    <p>
-
-    Blah blh bl bl bl b lb lb lb lb l
-
-
-
-    </p>
-    <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
-     <p>
-      BLAAAAAAh
-    </p>
 
   </body>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
