--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
+    <link href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css" rel="stylesheet">
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -45,19 +47,21 @@
           <span class="counter">140</span>
         </form>
       </section>
-      <section id="tweets">
-        <article class="tweet">
+      <section id="tweets-container">
+        <!-- <article class="tweet">
           <header>
-           <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVEZukS3WdeDbEY_CLsj7Re1_7s2I84S7SSpafWGVGg81SICd_>
+           <img class="avatar" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVEZukS3WdeDbEY_CLsj7Re1_7s2I84S7SSpafWGVGg81SICd_>
            <strong>Tweet 2 Header </strong>
           <span> @Tweet1User</span>
           </header>
           <p>Tweet 1 Content</p>
           <footer>
           Tweet 1 Footer
-          <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png>
-          <img src=https://www.seoclerk.com/pics/want55519-1naJS01508179397.png>
-          <img src=http://downloadicons.net/sites/default/files/small-flag-symbol-73352.png>
+          <div class="images">
+            <i class="icon ion-md-heart"></i>
+            <i class="icon ion-md-flag"></i>
+            <i class="icon ion-md-repeat"></i>
+          </div>
           </footer>
         </article>
         <article class="tweet">
@@ -69,11 +73,13 @@
           <p>Tweet 2 Content</p>
           <footer>
           Tweet 2 Footer
-          <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png>
-          <img src=https://www.seoclerk.com/pics/want55519-1naJS01508179397.png>
-          <img src=http://downloadicons.net/sites/default/files/small-flag-symbol-73352.png>
+          <div class="images">
+            <i class="icon ion-md-heart"></i>
+            <i class="icon ion-md-flag"></i>
+            <i class="icon ion-md-repeat"></i>
+          </div>
           </footer>
-        </article>
+        </article> -->
       </section>
     </main>
 
