--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <div class="buttons">
+        <button id="compose"> Compose</button>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -42,7 +45,7 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form  id="tweet-form" method="POST" action="/tweets">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <textarea class ="tweet-text" name="text" placeholder="What are you humming about?"></textarea>
           <input  type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
